# tp_nlp

./: .env  .gitignore  .~lock.Summary.docx#  F1.npy  F1_0_145_.npy  F1_145_729_.npy  IA_717_ProjectCHAI-3.ipynb  Notebook_test.ipynb  NotesEvaluation.txt  P.npy  Parser.py  R.npy  README.md  RoBertaNLP GitHub.ipynb  RoBerta_Score_bert 2.py  RoBerta_Score_bert.py  Summary.docx  Untitled.ipynb  all_manifestos.csv  code_stage_ipynb.ipynb  create_corpus.py  dl_docs.py  evaluate.ipynb  installation.txt  main.py  mapaie-metadata.csv  mots_importants_par_texte.xlsx  pre_processing.py  preprocess.py  pyproject.toml  requirements.txt  test.ipynb  test_stage_notebook.ipynb  ~$ummary.docx
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  evaluate-checkpoint.ipynb
docs/: 0.html  107.html  11.html  115.html  122.html  123.html  124.html  125.html  13.html  133.html  134.html  135.html  138.html  143.html  145.html  149.html  158.html  160.html  161.html  164.html  170.html  171.html  173.html  175.html  176.html  177.html  182.html  183.html  184.html  185.html  186.html  187.html  188.html  192.html  193.html  196.html  199.html  20.html  200.html  201.html  (+170 more)
documentation/: IA_717_ProjectCHAI-3.ipynb  Presentation.pptx  Presetation nlp.key  Presetation nlp.pptx  Presetation nlp_v2.pptx  Summary.docx
notebooks/: Empty.ipynb
preprocessed/: 0.txt  10.txt  100.txt  101.txt  102.txt  104.txt  105.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  135.txt  138.txt  139.txt  (+546 more)
resultats/: mots_importants_graph.xlsx
txts/: 0.txt  108.txt  11.txt  121.txt  125.txt  127.txt  135.txt  138.txt  14.txt  144.txt  159.txt  16.txt  167.txt  168.txt  170.txt  173.txt  174.txt  179.txt  185.txt  190.txt  191.txt  200.txt  205.txt  209.txt  216.txt  218.txt  22.txt  222.txt  227.txt  23.txt  233.txt  242.txt  244.txt  247.txt  248.txt  249.txt  251.txt  256.txt  258.txt  266.txt  (+152 more)
txts_2/: 13.txt  130.txt  143.txt  145.txt  17.txt  172.txt  177.txt  188.txt  193.txt  20.txt  208.txt  224.txt  225.txt  232.txt  25.txt  252.txt  254.txt  257.txt  262.txt  268.txt  269.txt  286.txt  329.txt  339.txt  346.txt  35.txt  362.txt  371.txt  376.txt  (+48 more)
(+1557 files in other folders)
