[tool.poetry]
name = "tp-nlp"
version = "0.1.0"
description = ""
authors = ["mbathe <mbathepaul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pulp = "2.7.0"
ujson = "^5.10.0"
pypdf2 = "^3.0.1"
pycryptodome = "^3.21.0"
nltk = "^3.9.1"
tqdm = "^4.66.5"
requests = "^2.32.3"
numpy = "^2.0.0"
scikit-learn = "^1.5.2"
bs4 = "^0.0.2"
python-magic = "^0.4.27"
python-magic-bin = "^0.4.14"
rake-nltk = "^1.0.6"
rake-keyword = "^0.0.1"
spacy = "^3.8.2"
python-dotenv = "^1.0.1"
langdetect = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
